# sconf

./: .gitmodules  CMakeLists.txt  README.md
include/sconf/: cfg.h  cfg_helper.h  group.h  property.h  property_base.h  sconf.h
src/: cfg_helper.cpp  group.cpp  property_base.cpp
tests/: tests.cpp
